syntax = "proto3";

import "google/api/annotations.proto";

package pbs;

option go_package = "github.com/shinemost/grpc-up/pbs";

service ProductInfo{
  rpc addProduct (Product) returns (ProductID){
     option (google.api.http) = {
            post: "/v1/product"
            body: "*"
        };
  }
  rpc getProduct (ProductID) returns (Product){
    option (google.api.http) = {
      get:"/v1/product/{value}"
  };
  }
}


message Product{
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductID{
  string value = 1;
}


